--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <!-- Linking the script file -->
     <script type="module" src="./js/index.js"></script>
-    <script type="module" src="./js/dataAPI.js"></script>
+    <script type="module" src="./js/dataAPI.js" defer></script>
     
 
   </head>
